src/objects/Territory__c.object
<CustomObject>
    <fields>
        <fullName>Commercial_Territory_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Relations_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Relations (1)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territories5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Relations_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Relations (2)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territories6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Inside_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Inside (1)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territories3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Inside_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Inside (2)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territories4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Outside_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Outside (1)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territories1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Outside_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Outside (2)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territories2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory Model</label>
        <referenceTo>Territory_Model__c</referenceTo>
        <relationshipLabel>Territories</relationshipLabel>
        <relationshipName>Territories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isChanged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isChanged</label>
        <type>Checkbox</type>
    </fields>
    <label>Territory</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Customer_Relations_1__c</columns>
        <columns>Commercial_Territory_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Territory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>